examples/hello_world/.antlr/ConnectITParser.java
// Generated from c:/Users/koteke/Desktop/connectIT/connectIT/examples/hello_world/ConnectIT.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ConnectITParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, ID=34, NUMBER=35, COLOR=36, PATTERN=37, WS=38, NEWLINE=39;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_declaration = 2, RULE_unitAssigmentList = 3, 
		RULE_unitAssignment = 4, RULE_layerAssigmentList = 5, RULE_layerAssignment = 6, 
		RULE_idList = 7, RULE_assignment = 8, RULE_expression = 9, RULE_unitExpr = 10, 
		RULE_layerExpr = 11, RULE_shapeDef = 12, RULE_layerChain = 13, RULE_modelDef = 14, 
		RULE_shapeChain = 15, RULE_showStatement = 16, RULE_ifStmt = 17, RULE_whileStmt = 18, 
		RULE_condition = 19, RULE_statementBlock = 20, RULE_forStmt = 21, RULE_functionDeclaration = 22, 
		RULE_returnExpr = 23, RULE_type = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "declaration", "unitAssigmentList", "unitAssignment", 
			"layerAssigmentList", "layerAssignment", "idList", "assignment", "expression", 
			"unitExpr", "layerExpr", "shapeDef", "layerChain", "modelDef", "shapeChain", 
			"showStatement", "ifStmt", "whileStmt", "condition", "statementBlock", 
			"forStmt", "functionDeclaration", "returnExpr", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'UNIT'", "'LAYER'", "'SHAPE'", "'MODEL'", "','", "'='", "'-->'", 
			"'*'", "'+'", "'<-'", "'<<-'", "'-'", "'SHOW'", "'IF'", "'['", "']'", 
			"'ELSE IF'", "'ELSE'", "'REPEAT WHILE'", "'<'", "'<='", "'>'", "'>='", 
			"'=='", "'!='", "'REPEAT'", "'TIMES'", "'METHOD'", "'('", "')'", "'RETURNS'", 
			"'RETURN'", "'NUMBER'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "ID", "NUMBER", 
			"COLOR", "PATTERN", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ConnectIT.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ConnectITParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ConnectITParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ConnectITParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ConnectITParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(50);
					match(NEWLINE);
					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(56);
					statement();
					setState(65);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(58); 
							_errHandler.sync(this);
							_alt = 1;
							do {
								switch (_alt) {
								case 1:
									{
									{
									setState(57);
									match(NEWLINE);
									}
									}
									break;
								default:
									throw new NoViableAltException(this);
								}
								setState(60); 
								_errHandler.sync(this);
								_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
							} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
							setState(62);
							statement();
							}
							} 
						}
						setState(67);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					}
					}
					} 
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(73);
				match(NEWLINE);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ShapeDefContext shapeDef() {
			return getRuleContext(ShapeDefContext.class,0);
		}
		public ModelDefContext modelDef() {
			return getRuleContext(ModelDefContext.class,0);
		}
		public ShowStatementContext showStatement() {
			return getRuleContext(ShowStatementContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ReturnExprContext returnExpr() {
			return getRuleContext(ReturnExprContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				shapeDef();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				modelDef();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				showStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(86);
				whileStmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(87);
				forStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(88);
				ifStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(89);
				functionDeclaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(90);
				returnExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ShapeDeclarationContext extends DeclarationContext {
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public ShapeDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ModelDeclarationContext extends DeclarationContext {
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public ModelDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LayerDeclarationContext extends DeclarationContext {
		public LayerAssigmentListContext layerAssigmentList() {
			return getRuleContext(LayerAssigmentListContext.class,0);
		}
		public LayerDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UnitDeclarationContext extends DeclarationContext {
		public UnitAssigmentListContext unitAssigmentList() {
			return getRuleContext(UnitAssigmentListContext.class,0);
		}
		public UnitDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new UnitDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(T__0);
				setState(94);
				unitAssigmentList();
				}
				break;
			case T__1:
				_localctx = new LayerDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(T__1);
				setState(96);
				layerAssigmentList();
				}
				break;
			case T__2:
				_localctx = new ShapeDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(T__2);
				setState(98);
				idList();
				}
				break;
			case T__3:
				_localctx = new ModelDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				match(T__3);
				setState(100);
				idList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitAssigmentListContext extends ParserRuleContext {
		public List<UnitAssignmentContext> unitAssignment() {
			return getRuleContexts(UnitAssignmentContext.class);
		}
		public UnitAssignmentContext unitAssignment(int i) {
			return getRuleContext(UnitAssignmentContext.class,i);
		}
		public UnitAssigmentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitAssigmentList; }
	}

	public final UnitAssigmentListContext unitAssigmentList() throws RecognitionException {
		UnitAssigmentListContext _localctx = new UnitAssigmentListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unitAssigmentList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			unitAssignment();
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(104);
					match(T__4);
					setState(105);
					unitAssignment();
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitAssignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ConnectITParser.ID, 0); }
		public UnitExprContext unitExpr() {
			return getRuleContext(UnitExprContext.class,0);
		}
		public UnitAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitAssignment; }
	}

	public final UnitAssignmentContext unitAssignment() throws RecognitionException {
		UnitAssignmentContext _localctx = new UnitAssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unitAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ID);
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(112);
				match(T__5);
				setState(113);
				unitExpr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayerAssigmentListContext extends ParserRuleContext {
		public List<LayerAssignmentContext> layerAssignment() {
			return getRuleContexts(LayerAssignmentContext.class);
		}
		public LayerAssignmentContext layerAssignment(int i) {
			return getRuleContext(LayerAssignmentContext.class,i);
		}
		public LayerAssigmentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layerAssigmentList; }
	}

	public final LayerAssigmentListContext layerAssigmentList() throws RecognitionException {
		LayerAssigmentListContext _localctx = new LayerAssigmentListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_layerAssigmentList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			layerAssignment();
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(117);
					match(T__4);
					setState(118);
					layerAssignment();
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayerAssignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ConnectITParser.ID, 0); }
		public LayerExprContext layerExpr() {
			return getRuleContext(LayerExprContext.class,0);
		}
		public LayerAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layerAssignment; }
	}

	public final LayerAssignmentContext layerAssignment() throws RecognitionException {
		LayerAssignmentContext _localctx = new LayerAssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_layerAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(ID);
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(125);
				match(T__5);
				setState(126);
				layerExpr(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ConnectITParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ConnectITParser.ID, i);
		}
		public IdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idList; }
	}

	public final IdListContext idList() throws RecognitionException {
		IdListContext _localctx = new IdListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_idList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(ID);
			setState(134);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(130);
					match(T__4);
					setState(131);
					match(ID);
					}
					} 
				}
				setState(136);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ConnectITParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public LayerChainContext layerChain() {
			return getRuleContext(LayerChainContext.class,0);
		}
		public ShapeChainContext shapeChain() {
			return getRuleContext(ShapeChainContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(ID);
				setState(138);
				match(T__5);
				setState(139);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				layerChain();
				setState(141);
				match(T__6);
				setState(142);
				match(ID);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				shapeChain();
				setState(145);
				match(T__6);
				setState(146);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public UnitExprContext unitExpr() {
			return getRuleContext(UnitExprContext.class,0);
		}
		public LayerExprContext layerExpr() {
			return getRuleContext(LayerExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(ConnectITParser.ID, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expression);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				unitExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				layerExpr(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitExprContext extends ParserRuleContext {
		public TerminalNode COLOR() { return getToken(ConnectITParser.COLOR, 0); }
		public TerminalNode PATTERN() { return getToken(ConnectITParser.PATTERN, 0); }
		public UnitExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitExpr; }
	}

	public final UnitExprContext unitExpr() throws RecognitionException {
		UnitExprContext _localctx = new UnitExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_unitExpr);
		try {
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				match(COLOR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				match(PATTERN);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayerExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ConnectITParser.ID, 0); }
		public TerminalNode NUMBER() { return getToken(ConnectITParser.NUMBER, 0); }
		public List<LayerExprContext> layerExpr() {
			return getRuleContexts(LayerExprContext.class);
		}
		public LayerExprContext layerExpr(int i) {
			return getRuleContext(LayerExprContext.class,i);
		}
		public LayerExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layerExpr; }
	}

	public final LayerExprContext layerExpr() throws RecognitionException {
		return layerExpr(0);
	}

	private LayerExprContext layerExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LayerExprContext _localctx = new LayerExprContext(_ctx, _parentState);
		LayerExprContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_layerExpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(161);
				match(ID);
				setState(162);
				match(T__7);
				setState(163);
				match(NUMBER);
				}
				break;
			case 2:
				{
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(172);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LayerExprContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_layerExpr);
					setState(167);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(168);
					match(T__8);
					setState(169);
					layerExpr(3);
					}
					} 
				}
				setState(174);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShapeDefContext extends ParserRuleContext {
		public LayerChainContext layerChain() {
			return getRuleContext(LayerChainContext.class,0);
		}
		public TerminalNode ID() { return getToken(ConnectITParser.ID, 0); }
		public ShapeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shapeDef; }
	}

	public final ShapeDefContext shapeDef() throws RecognitionException {
		ShapeDefContext _localctx = new ShapeDefContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_shapeDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			layerChain();
			setState(176);
			match(T__6);
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(177);
				match(T__2);
				}
			}

			setState(180);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayerChainContext extends ParserRuleContext {
		public LayerExprContext layerExpr() {
			return getRuleContext(LayerExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(ConnectITParser.ID, 0); }
		public LayerChainContext layerChain() {
			return getRuleContext(LayerChainContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(ConnectITParser.NUMBER, 0); }
		public LayerChainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layerChain; }
	}
